@@ -1,3 +1,7 @@
+2016-01-19  Yu-Jie Lin <livibetter@gmail.com>
+	* nInvaders.c: fixed different lives, weite, level, and skill_level
+	  variables in objects.
+
 2003-10-14  Alexander Hollinger <alexander.hollinger@gmx.net>
 	* LICENSE: renamed gpl.txt to LICENSE
 	* added configure-script: Makefile.in, config.h.in, configure
